<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_system" />

    <item
        android:id="@+id/navigation_wx"
        android:icon="@drawable/ic_wx_title"
        android:title="@string/title_wx" />

    <item
        android:id="@+id/navigation_demo"
        android:icon="@drawable/ic_create_new_folder_black_24dp"
        android:title="@string/title_demo" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mine" />

</menu>
