<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_255"
    android:orientation="vertical"
    tools:context="cn.white.ymc.wanandroidmaster.ui.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:titleTextColor="@color/white_255" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_login"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_60"
                android:background="@drawable/drawable_register_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                <EditText
                    android:id="@+id/et_ensure_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/please_enter_username"
                    tools:ignore="RtlHardcoded,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/drawable_register_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_lock_open_black_24dp" />

                <EditText
                    android:id="@+id/et_ensure_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/please_enter_password"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/button_ble_press"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white_255"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_50"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/no_account_register"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/sp_13"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
