<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--头像-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/theme">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/dp_85"
                    android:layout_height="@dimen/dp_85">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/blue" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_head"
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="@dimen/dp_80"
                        android:layout_centerInParent="true"
                        android:src="@color/white_255" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/click_head_login"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/homepage_color" />
            </LinearLayout>

        </RelativeLayout>

        <!--收藏-->
        <RelativeLayout
            android:id="@+id/view_collect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/white_255">

            <ImageView
                android:id="@+id/image_collect"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_16"
                app:srcCompat="@drawable/icon_no_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_toEndOf="@+id/image_collect"
                android:text="@string/my_collect"
                android:textColor="@color/homepage_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                app:srcCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white_255" />

        <!--书签-->
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/view_label"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="@color/white_255">

            <ImageView
                android:id="@+id/image_label"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_16"
                app:srcCompat="@drawable/ic_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_toEndOf="@+id/image_label"
                android:text="@string/my_label"
                android:textColor="@color/homepage_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                app:srcCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <View
            android:visibility="gone"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white_255" />

        <!--关于我们-->
        <RelativeLayout
            android:id="@+id/view_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="@color/white_255">

            <ImageView
                android:id="@+id/image_about"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_16"
                app:srcCompat="@drawable/ic_group_gray_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_toEndOf="@+id/image_about"
                android:text="@string/about_us"
                android:textColor="@color/homepage_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                app:srcCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_110"
            android:layout_marginStart="@dimen/dp_110"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/drawable_fill_blue"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/white_255"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</RelativeLayout>
